--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -21,7 +21,7 @@
           </clr-checkbox-wrapper>
             <ng-content select="[error-message]"></ng-content>
           <!-- <button type="submit" class="btn btn-primary">NEXT</button> -->
-          <a href="https://scidap.com/register" class="signup" target="_blank">New user? Please register first.</a>
+          <a (click)="_electronService.openExternal('https://scidap.com/register')"  class="signup">New user? Please register first.</a>
       </div>
   </form>
 </div>
